# fastapi-tutorial-course-work

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/apis/: base.py
backend/apis/general_pages/: route_homepage.py
backend/apis/version1/: route_general_pages.py  route_users.py
backend/core/: config.py
backend/db/: base.py  session.py
backend/db/models/: users.py
backend/db/repositories/: users.py
backend/schemas/: users.py
backend/templates/components/: navbar.html
backend/templates/general_pages/: homepage.html
backend/templates/shared/: base.html
